--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -204,24 +204,20 @@ html, body {
             display: flex;
             font-size: 0.875rem;
             line-height: 1.375rem;
-            flex-direction: row;
-            
+            flex-direction: row;    
         }
         &-quote__the-bees{
             font-size: 1.5rem;
             line-height: 2rem;
             padding-top: 2.25rem;
             padding-bottom: 2.25rem;
-            margin: 0;
-            
+            margin: 0;       
         }
         &-container{
             display: flex;
             flex-direction: column;
             align-items: center;
             padding-right: 2.25rem
-            
-
         }
         &-quote__text{
             margin: 0;
@@ -234,7 +230,6 @@ html, body {
         &-quote__container__text1{
             padding: 0;
         }
-       
     }
     &__header{
     margin: 0;
@@ -257,7 +252,6 @@ html, body {
 .about-text {
     margin: 0;
 }
-
 
 .photo {
     background: $Alabaster;
@@ -288,23 +282,17 @@ html, body {
         &-imgs {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
-            
+            justify-content: center;     
         }
         &-imgs__column{
             flex: 25%;
-            max-width: 100%;
-           
-           
+            max-width: 100%; 
         }
         &-imgs__column__img{
             vertical-align: middle;
-            width: 100%;
-            
+            width: 100%; 
         }
-
     }
-
 }
 
 .photo-img__img {
@@ -313,75 +301,128 @@ html, body {
 }
 
 .footer {
+    @include mobile {
     padding-right: 1rem;
     padding-left: 1rem;
     background: $bandsite-Black;
     color: $white;
-    
-    &-title{
-        padding-top: 1.5rem;
-        padding-bottom: 1rem;
-        margin: 0;
-    }
-    &--info__socials{
-        list-style-type: none;
-    }
-    &-list{
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    &-list__name2 {
-        padding-bottom: 1rem;
-    }
-    &-list__general2{
-        padding-bottom: 1rem;
-    }
-    &-list__email{
-        padding-bottom: 1rem;
-    }
-    &-logo__mobile{
-        padding-top: 1.5rem;
-    }
-    &-logo{
-        background-image: url('../assets/Logo/Logo-bandsite.svg');
-        background-repeat: no-repeat;
-        background-position: left;
-        height: 1.25rem;
-        
-    }
-    &-info__instagram{
-        background-image: url(/assets/Icons/SVG/Icon-instagram.svg);    
-        justify-content: center;
-        background-repeat: no-repeat;
-        width: 3rem;
-        height: 3rem;
-        
-    }
-    &-info__facebook{
-        background-image: url(/assets/Icons/SVG/Icon-facebook.svg);    
-        justify-content: center;
-        background-repeat: no-repeat;
-        width: 3rem;
-        height: 3rem;    
-       
-    }
-    &-info__twitter{
-        background-image: url(/assets/Icons/SVG/Icon-twitter.svg);    
-        justify-content: center;
-        background-repeat: no-repeat;
-        width: 3rem;
-        height: 3rem;
 
+        &-title{
+            padding-top: 1.5rem;
+            padding-bottom: 1rem;
+            margin: 0;
+        }
+        &--info__socials{
+            list-style-type: none;
+        }
+        &-list{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        &-list__name2 {
+            padding-bottom: 1rem;
+        }
+        &-list__general2{
+            padding-bottom: 1rem;
+        }
+        &-list__email{
+            padding-bottom: 1rem;
+        }
+        &-logo__mobile{
+            padding-top: 1.5rem;
+        }
+        &-logo{
+            background-image: url('../assets/Logo/Logo-bandsite.svg');
+            background-repeat: no-repeat;
+            background-position: left;
+            height: 1.25rem;    
+        }
+        &-info__instagram{
+            background-image: url(/assets/Icons/SVG/Icon-instagram.svg);    
+            justify-content: center;
+            background-repeat: no-repeat;
+            width: 3rem;
+            height: 3rem;     
+        }
+        &-info__facebook{
+            background-image: url(/assets/Icons/SVG/Icon-facebook.svg);    
+            justify-content: center;
+            background-repeat: no-repeat;
+            width: 3rem;
+            height: 3rem;       
+        }
+        &-info__twitter{
+            background-image: url(/assets/Icons/SVG/Icon-twitter.svg);    
+            justify-content: center;
+            background-repeat: no-repeat;
+            width: 3rem;
+            height: 3rem;
+        }
+        &-info__websites{
+            display: flex;
+        }
+        &-list{
+            padding-bottom: 1.5rem;
+        }
     }
-    &-info__websites{
-        display: flex;
-        
+
+    @include tablet {
+    padding-right: 2.25rem;
+    padding-left: 2.25rem;
+    background: $bandsite-Black;
+    color: $white;
+        &-info {
+            display: flex;
+            align-items: flex-end;
+            background-image: url('../assets/Logo/Logo-bandsite.svg');
+            background-repeat: no-repeat;
+            background-position: right;
+        }
+        &-title{
+            padding-top: 3rem;
+            padding-bottom: 2.25rem;
+            margin: 0;
+            width: 30%;
+            align-items: flex-end;
+            font-size: 2.25rem;
+        }
+        &--info__socials{
+            list-style-type: none;  
+        }
+        &-info__socials__container{
+            flex: 25%;
+            max-width: 100%;
+            padding-right: 1rem;
+        }
+        &-list{
+            list-style-type: none;
+            margin: 0;
+            padding: 0; 
+        }
+        &-info__socails__tablet{
+            display: flex;
+            flex-wrap: wrap;
+            font-size: 0.875rem;
+            line-height: 1.25rem;  
+        }
+        &-logo{
+            display: none;
+        }
+        &-list__name2 {
+            padding-bottom: 2.25rem;
+        }
+        &-list__general2{
+            padding-bottom: 2.25rem;
+        }
+        &-list__email{
+            padding-bottom: 2.25rem;
+        }
+        &-logo__mobile{
+            padding-top: 2.25rem;
+            padding-bottom: 2.25rem;
+        }
     }
-    &-list{
-        padding-bottom: 1.5rem;
-    }
-    
 }
 
 .copyright {
