--- a/styles/bio.css
+++ b/styles/bio.css
@@ -11,13 +11,14 @@ html, body {
   background: #323232;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 @media screen and (min-width: 768px) {
   .header {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 1rem;
+    padding: 2.25rem;
   }
   .header__logo {
     width: 20%;
@@ -30,18 +31,14 @@ html, body {
     align-items: center;
     padding: 2.25rem;
   }
-  .header__logo {
-    width: 20%;
-  }
 }
 .header__logo {
   background-image: url("../assets/Logo/Logo-bandsite.svg");
   background-repeat: no-repeat;
   background-position: center;
-  height: 1.25rem;
+  align-items: center;
+  max-height: 20px;
   padding-top: 1.5rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
 }
 
 .nav {
@@ -49,7 +46,7 @@ html, body {
   flex-direction: row;
   justify-content: space-around;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) {
   .nav {
     justify-content: flex-end;
   }
@@ -59,7 +56,6 @@ html, body {
   }
 }
 .nav__link {
-  padding: 0.625rem;
   text-decoration: none;
   color: #AFAFAF;
   transition: background-color 0.25s;
@@ -74,8 +70,88 @@ html, body {
   }
 }
 .nav__link:hover {
+  color: #FFFFFF;
+}
+.nav__button {
+  padding: 0.625rem;
+  text-decoration: none;
+  color: #AFAFAF;
+  transition: background-color 0.25s;
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  transition: all 0.5s;
+  background-color: #323232;
+}
+@media screen and (min-width: 768px) {
+  .nav__button {
+    font-size: 1.5rem;
+  }
+}
+.nav__button:hover {
+  background-color: black;
   border-bottom: 0.1875rem solid #FFFFFF;
   color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .nav {
+    justify-content: flex-end;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-left: 2.25rem;
+  }
+  .nav:hover {
+    border-bottom: -1.1875rem solid #FFFFFF;
+    color: #FFFFFF;
+  }
+}
+.nav__link {
+  text-decoration: none;
+  color: #AFAFAF;
+  transition: background-color 0.25s;
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  transition: all 0.5s;
+}
+@media screen and (min-width: 768px) {
+  .nav__link {
+    font-size: 1.5rem;
+  }
+}
+.nav__link:hover {
+  color: #FFFFFF;
+}
+.nav__button {
+  padding: 0.625rem;
+  text-decoration: none;
+  color: #AFAFAF;
+  transition: background-color 0.25s;
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  transition: all 0.5s;
+  background-color: #323232;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .nav__button {
+    font-size: 1.5rem;
+  }
+}
+.nav__button:hover {
+  background-color: black;
+  border-bottom: 0.1875rem solid #FFFFFF;
+  color: #FFFFFF;
+}
+@media screen and (min-width: 1280px) {
+  .nav {
+    margin-left: 2.25rem;
+  }
 }
 
 .hero {
@@ -441,13 +517,13 @@ html, body {
     background-image: url("../assets/Logo/Logo-bandsite.svg");
     background-repeat: no-repeat;
     background-position: right;
-    background-position-x: 34rem;
+    margin-right: 1rem;
   }
   .footer-title {
     padding-top: 3rem;
     padding-bottom: 2.25rem;
     margin: 0;
-    width: 30%;
+    width: 33%;
     align-items: flex-end;
     font-size: 2.25rem;
   }
@@ -486,6 +562,13 @@ html, body {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
   }
+  .footer-info__instagram {
+    background-image: url(/assets/Icons/SVG/Icon-instagram.svg);
+    justify-content: center;
+    background-repeat: no-repeat;
+    width: 3rem;
+    height: 4rem;
+  }
 }
 @media screen and (min-width: 1280px) {
   .footer {
@@ -500,7 +583,7 @@ html, body {
     background-image: url("../assets/Logo/Logo-bandsite.svg");
     background-repeat: no-repeat;
     background-position: right;
-    background-position-x: 65rem;
+    margin-right: 2.25rem;
   }
   .footer-title {
     padding-top: 3rem;
@@ -514,8 +597,8 @@ html, body {
     list-style-type: none;
   }
   .footer-info__socials__container {
-    flex: 25%;
-    max-width: 100%;
+    flex: 0%;
+    max-width: 18%;
     padding-right: 1rem;
   }
   .footer-list {
