--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -48,12 +48,13 @@ html, body {
     background: $bandsite-Black;
     display: flex;
     flex-direction: column;
+    position: relative;
    
     @include tablet {
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
-        padding: 1rem;
+        padding: 2.25rem;
 
         &__logo{
             width: 20%;
@@ -65,20 +66,15 @@ html, body {
         justify-content: flex-start;
         align-items: center;
         padding: 2.25rem;
-
-        &__logo{
-            width: 20%;
-        }
     }
 
     &__logo {
         background-image: url('../assets/Logo/Logo-bandsite.svg');
         background-repeat: no-repeat;
         background-position: center;
-        height: 1.25rem;
+        align-items: center;
+        max-height: 20px;
         padding-top: 1.5rem;
-        padding-right: 1rem;
-        padding-left: 1rem;
     }
 }
 
@@ -86,8 +82,9 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
- 
-    @include tablet {
+    
+
+    @include mobile {
         justify-content: flex-end;
 
         &:hover{
@@ -97,7 +94,6 @@ html, body {
         }
     }
     &__link {
-        padding: 0.625rem;
         text-decoration: none;
         color: $silver;
         transition: background-color 0.25s;
@@ -108,12 +104,96 @@ html, body {
   
         @include tablet {
             font-size: 1.5rem;
+          
         }
         &:hover{
-            // background-color: darken($bandsite-DarkBlack, 5%);
-            border-bottom: 0.1875rem solid ($white);
             color: $white;
         }
+    }
+    &__button {
+            padding: 0.625rem;
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+            background-color: $bandsite-Black;
+            
+           
+
+    
+            @include tablet {
+                font-size: 1.5rem;
+            
+            }
+            &:hover{
+                background-color: darken($bandsite-DarkBlack, 5%);
+                border-bottom: 0.1875rem solid ($white);
+                color: $white;
+            
+            }
+    }
+ 
+    @include tablet {
+        justify-content: flex-end;
+        position:absolute;
+        top: 0;
+        height: 100%;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        margin-left: 2.25rem;
+       
+
+        &:hover{
+            // background-color: darken($bandsite-DarkBlack, 5%);
+            border-bottom: -1.1875rem solid ($white);
+            color: $white;
+        }
+    }
+    &__link {
+        text-decoration: none;
+        color: $silver;
+        transition: background-color 0.25s;
+        display: flex;
+        width: 50%;
+        justify-content: space-evenly;
+        transition: all 0.5s;
+        
+  
+        @include tablet {
+            font-size: 1.5rem;
+        }
+        &:hover{
+            // border-bottom: 0.1875rem solid ($white);
+            color: $white;
+        }
+    }
+    &__button {
+            padding: 0.625rem;
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+            background-color: $bandsite-Black;
+            align-items: center;
+    
+            @include tablet {
+                font-size: 1.5rem;
+            }
+            &:hover{
+                background-color: darken($bandsite-DarkBlack, 5%);
+                border-bottom: 0.1875rem solid ($white);
+                color: $white;
+            }
+    }
+    @include desktop {
+       margin-left: 2.25rem;
     }
 } 
 
@@ -485,15 +565,15 @@ html, body {
             background-image: url('../assets/Logo/Logo-bandsite.svg');
             background-repeat: no-repeat;
             background-position: right;
-            background-position-x: 34rem;
+            margin-right: 1rem;
         }
         &-title{
             padding-top: 3rem;
             padding-bottom: 2.25rem;
             margin: 0;
-            width: 30%;
+            width: 33%;
             align-items: flex-end;
-            font-size: 2.25rem;
+            font-size: 2.25rem;     
         }
         &--info__socials{
             list-style-type: none;  
@@ -530,6 +610,13 @@ html, body {
             padding-top: 2.25rem;
             padding-bottom: 2.25rem;
         }
+        &-info__instagram{
+            background-image: url(/assets/Icons/SVG/Icon-instagram.svg);    
+            justify-content: center;
+            background-repeat: no-repeat;
+            width: 3rem;
+            height: 4rem;     
+        }
     }
 
     @include desktop {
@@ -544,7 +631,7 @@ html, body {
                 background-image: url('../assets/Logo/Logo-bandsite.svg');
                 background-repeat: no-repeat;
                 background-position: right;
-                background-position-x: 65rem;
+                margin-right: 2.25rem;
             }
             &-title{
                 padding-top: 3rem;
@@ -558,8 +645,8 @@ html, body {
                 list-style-type: none;  
             }
             &-info__socials__container{
-                flex: 25%;
-                max-width: 100%;
+                flex: 0%;
+                max-width: 18%;
                 padding-right: 1rem;
             }
             &-list{
