--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -2,6 +2,7 @@
 @use 'partials/mixins' as *;
 
 
+
 // Variables
 $mobile-width: 320px;
 $tablet-width: 768px;
@@ -74,7 +75,8 @@ html, body {
         background-position: center;
         align-items: center;
         max-height: 20px;
-        padding-top: 1.5rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
 }
 
@@ -222,6 +224,7 @@ html, body {
     @include desktop {
         font-size: 3.75rem;
         line-height: 4.25rem;
+        
 
         &__title{
         margin: 0;
@@ -230,6 +233,7 @@ html, body {
     &__title {
     color: $white;
     position: absolute;
+    font-weight: 400;
     
     }
     &__img {
