--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -457,29 +457,60 @@ html, body {
 .shows {
     @include mobile {
         padding: 1rem;
+
+        
         &-title{
             font-size: 1.5rem;
         }
-        &-oldComments{
-            list-style-type: none;
+        &-left{
+            display: flex;
+            flex-direction: column;
         }
-        &-container__img{
+        &-top{
+            display: flex;
+            align-items: baseline;
+        }
+        &-container__left__img{
             vertical-align: middle;
             width: 2.25rem;
             height: 2.25rem;
             border-radius: 50%;
+            padding: 0.75rem;
+            margin-top: 2rem;
         }
         &-container{
             display: flex;
-            padding-bottom: 1rem;
+            justify-content: space-evenly;
         }
-        &-comment__btn{
-            width: 100%;
+        &-bottom__container{
+            display: flex;
         }
-        &-comments a{
-            justify-content: space-between;
+        &-middle__container{
+            display: flex;
+            flex-direction: column;  
         }
+        &-top__container{
+            display: flex;
+            flex-direction: column;
+        }
+        &-comment__right__btn{
+            min-width: 100%;
+            height: 2.25rem;
+            border-radius: 0.25rem;
+            background-color: $bandsite-Black;
+            color: $white;
+        }
+        &-comments__name{
+            display: inline-block;
+            
+        }
+        &-comments__date{
+            display: inline-block;
+
+        }
+           
     
+   
     
     }
 
