--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -501,15 +501,34 @@ html, body {
             color: $white;
         }
         &-comments__name{
-            width: 75%;
+            width: 50%;
             margin: 0 ;
             display: inline-block;
         }
         &-comments__date{
-            width: 25%;
+            width: 10%;
             margin: 0 ;
             display: inline-block;
         }
+        &-comments__text{
+            display: flex;
+            justify-content: flex-end;
+            width: 75%;
+            margin-left: 3.5rem;
+
+            
+        }
+        &-comments__img{
+            vertical-align: middle;
+            width: 2.25rem;
+            height: 2.25rem;
+            border-radius: 50%;
+            padding: 0.75rem;
+            margin-top: 2rem;
+            color: $Mercury;
+        }
+      
+        
            
     
     }
