--- a/styles/bio.css
+++ b/styles/bio.css
@@ -458,13 +458,17 @@ html, body {
   .shows-title {
     font-size: 1.5rem;
   }
-  .shows-left {
+  .shows-top__left {
     display: flex;
     flex-direction: column;
+    width: 25%;
   }
   .shows-top {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
+  }
+  .shows-top__right {
+    width: 75%;
   }
   .shows-container__left__img {
     vertical-align: middle;
@@ -472,22 +476,44 @@ html, body {
     height: 2.25rem;
     border-radius: 50%;
     padding: 0.75rem;
-    margin-top: 2rem;
   }
   .shows-container {
     display: flex;
     justify-content: space-evenly;
   }
+  .shows-top__container__name {
+    color: #E1E1E1;
+  }
+  .shows-top__container__name__text-box {
+    background-color: #E1E1E1;
+    border-radius: 0.25rem;
+    border-color: #AFAFAF;
+  }
+  .shows-container__comment-box {
+    height: 8rem;
+    background-color: #E1E1E1;
+    border-radius: 0.25rem;
+    border-color: #AFAFAF;
+  }
+  .shows-container__comment {
+    color: #E1E1E1;
+  }
   .shows-bottom__container {
     display: flex;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
   .shows-middle__container {
     display: flex;
     flex-direction: column;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
   .shows-top__container {
     display: flex;
     flex-direction: column;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
   .shows-comment__right__btn {
     min-width: 100%;
