--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -462,13 +462,17 @@ html, body {
         &-title{
             font-size: 1.5rem;
         }
-        &-left{
+        &-top__left{
             display: flex;
             flex-direction: column;
+            width: 25%;
         }
         &-top{
             display: flex;
-            align-items: baseline;
+            align-items: flex-start;
+        }
+        &-top__right{
+            width: 75%;
         }
         &-container__left__img{
             vertical-align: middle;
@@ -476,22 +480,44 @@ html, body {
             height: 2.25rem;
             border-radius: 50%;
             padding: 0.75rem;
-            margin-top: 2rem;
         }
         &-container{
             display: flex;
             justify-content: space-evenly;
         }
+        &-top__container__name{
+            color: $Mercury;
+        }
+        &-top__container__name__text-box{
+            background-color: $Mercury;
+            border-radius: 0.25rem;
+            border-color: $silver;
+        }
+        &-container__comment-box{
+            height: 8rem;
+            background-color: $Mercury;
+            border-radius: 0.25rem;
+            border-color: $silver;
+        }
+        &-container__comment{
+            color: $Mercury;
+        }
         &-bottom__container{
             display: flex;
+            padding-top: 0.75rem;
+            padding-bottom: 0.75rem;
         }
         &-middle__container{
             display: flex;
             flex-direction: column;  
+            padding-top: 0.75rem;
+            padding-bottom: 0.75rem;
         }
         &-top__container{
             display: flex;
             flex-direction: column;
+            padding-top: 0.75rem;
+            padding-bottom: 0.75rem;
         }
         &-comment__right__btn{
             min-width: 100%;
@@ -515,7 +541,6 @@ html, body {
             justify-content: flex-end;
             width: 75%;
             margin-left: 3.5rem;
-
             
         }
         &-comments__img{
