--- a/styles/bio.css
+++ b/styles/bio.css
@@ -524,7 +524,6 @@ html, body {
   }
   .shows-comments__name {
     width: 50%;
-    margin: 0;
     display: inline-block;
   }
   .shows-comments__date {
@@ -544,7 +543,6 @@ html, body {
     height: 2.25rem;
     border-radius: 50%;
     padding: 0.75rem;
-    margin-top: 2rem;
     color: #E1E1E1;
   }
 }
@@ -592,6 +590,47 @@ html, body {
     padding-left: 3rem;
   }
 }
+@media screen and (min-width: 1280px) {
+  .shows-top {
+    justify-content: center;
+  }
+  .shows-top__right {
+    width: 45%;
+  }
+  .shows-top__left {
+    padding: 0;
+    padding-top: 1.5rem;
+    width: 7%;
+  }
+  .shows-container__left__img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .shows-comment__right__btn {
+    border-radius: 0.25rem;
+  }
+  .shows-hr {
+    width: 51%;
+    margin-bottom: 2.25rem;
+    margin-top: -0.5rem;
+  }
+  .shows-comments__line {
+    width: 50%;
+    padding-left: 3rem;
+  }
+  .shows-comments__name {
+    width: 39%;
+    padding-left: 19rem;
+  }
+  .shows-comments__text {
+    width: 45%;
+    padding-left: 22.5rem;
+  }
+  .shows-comments__img {
+    transform: translateX(18rem);
+  }
+}
+
 @media screen and (min-width: 320px) {
   .footer {
     padding-right: 1rem;
