--- a/styles/bio.css
+++ b/styles/bio.css
@@ -17,6 +17,11 @@ html, body {
   margin: 0;
   padding: 0;
 }
+@media screen and (min-width: 768px) {
+  html, body {
+    min-width: 768px;
+  }
+}
 
 .header {
   background: #323232;
@@ -169,6 +174,7 @@ html, body {
 .hero {
   display: flex;
   align-items: center;
+  position: relative;
 }
 @media screen and (min-width: 320px) {
   .hero__title {
@@ -179,6 +185,7 @@ html, body {
 }
 @media screen and (min-width: 768px) {
   .hero {
+    min-width: 768px;
     font-size: 3.75rem;
     line-height: 4.25rem;
   }
@@ -200,10 +207,20 @@ html, body {
   color: #FFFFFF;
   position: absolute;
   font-weight: 400;
+  z-index: 1;
+}
+.hero-img-overlay {
+  position: absolute;
+  background: #323232;
+  width: 100%;
+  height: 100%;
+  transition: none;
+  opacity: 50%;
 }
 .hero__img {
   width: 100%;
   height: auto;
+  display: block;
 }
 
 .about {
@@ -462,6 +479,7 @@ html, body {
     display: flex;
     flex-direction: column;
     width: 25%;
+    transform: translateY(1.5rem);
   }
   .shows-top {
     display: flex;
@@ -482,21 +500,27 @@ html, body {
     justify-content: space-evenly;
   }
   .shows-top__container__name {
-    color: #E1E1E1;
+    color: #AFAFAF;
   }
   .shows-top__container__name__text-box {
     background-color: #E1E1E1;
-    border-radius: 0.25rem;
     border-color: #AFAFAF;
+    border-radius: 0.25rem;
+    border: 0.0625rem;
+    height: 2.25rem;
+    margin: 0.4rem 0;
   }
   .shows-container__comment-box {
-    height: 8rem;
+    max-height: 8rem;
+    min-height: 8rem;
     background-color: #E1E1E1;
-    border-radius: 0.25rem;
     border-color: #AFAFAF;
+    border-radius: 0.25rem;
+    border: 0.0625rem;
+    margin: 0.4rem 0;
   }
   .shows-container__comment {
-    color: #E1E1E1;
+    color: #AFAFAF;
   }
   .shows-bottom__container {
     display: flex;
@@ -517,8 +541,9 @@ html, body {
   }
   .shows-comment__right__btn {
     min-width: 100%;
-    height: 2.25rem;
+    height: 2.5rem;
     border-radius: 0.25rem;
+    border: 0.0625rem;
     background-color: #323232;
     color: #FFFFFF;
   }
