--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -396,7 +396,7 @@ html, body {
             padding-top: 1.5rem;
             padding-bottom: 1rem;
             margin: 0;
-            font-size: 2.25rem;
+            font-size: 1.5rem;            
         }
     }
 
@@ -473,30 +473,32 @@ html, body {
 .shows {
     @include mobile {
         padding: 1rem;
-
         
         &-title{
             font-size: 1.5rem;
+            margin: 0;
         }
         &-top__left{
             display: flex;
             flex-direction: column;
-            width: 25%;
-            transform: translateY(1.5rem);
+            transform: translateY(2.5rem);
         }
         &-top{
             display: flex;
             align-items: flex-start;
+            justify-content: flex-start;
         }
         &-top__right{
-            width: 75%;
+            width: 100%;
+            padding-left: 0.75rem;
+    
         }
         &-container__left__img{
             vertical-align: middle;
             width: 2.25rem;
             height: 2.25rem;
             border-radius: 50%;
-            padding: 0.75rem;
+            // padding: 0.75rem;
         }
         &-container{
             display: flex;
@@ -504,36 +506,41 @@ html, body {
         }
         &-top__container__name{
             color: $silver;
+            font-size: 0.625rem;
+            line-height: 1.25rem;            ;
         }
         &-top__container__name__text-box{
-            background-color: $Mercury;
-            border-color: $silver;
+            background-color: $Alabaster;
+            border-color: $Mercury;
+            
             border-radius: 0.25rem;
             border: 0.0625rem;
-            height: 2.25rem;
             margin: 0.4rem 0;
+            padding: 0.75rem;
         }
         &-container__comment-box{
-            max-height: 8rem;
-            min-height: 8rem;
-            background-color: $Mercury;
-            border-color: $silver;
+            background-color: $Alabaster;
+            border-color: $Mercury;
+            
             border-radius: 0.25rem;
             border: 0.0625rem;
             margin: 0.4rem 0;
+            padding: 0.75rem;
+            padding-bottom: 4rem;
+          
         }
         &-container__comment{
             color: $silver;
+            font-size: 0.625rem;
+            line-height: 1.25rem;     
         }
         &-bottom__container{
             display: flex;
-            padding-top: 0.75rem;
             padding-bottom: 0.75rem;
         }
         &-middle__container{
             display: flex;
             flex-direction: column;  
-            padding-top: 0.75rem;
             padding-bottom: 0.75rem;
         }
         &-top__container{
@@ -572,9 +579,12 @@ html, body {
             height: 2.25rem;
             border-radius: 50%;
             padding: 0.75rem;
-            // margin-top: 2rem;
             color: $Mercury;
         }
+        &-hr{
+            width: 90%;
+        }
+        
       
         
            
